--- a/app/templates/tools/payment_rates_edit.html
+++ b/app/templates/tools/payment_rates_edit.html
@@ -41,7 +41,7 @@
           </div>
           <div class="row">
             <div class="col mb-2">
-              <a class="btn btn-warning" role="button" href="{{ url_for('.rates_values', id_=rate.id) }}" style="width: 100%;font-weight: bold;border-style: none;">Значения</a>
+              <a class="btn btn-warning" role="button" href="{{ url_for('.rates_values_get', id_=rate.id) }}" style="width: 100%;font-weight: bold;border-style: none;">Значения</a>
             </div>
           </div>
           <div class="row">
