--- a/app/templates/tools/payment_rates.html
+++ b/app/templates/tools/payment_rates.html
@@ -29,7 +29,7 @@
                   <td>
                     <div class="btn-group" role="group">
                       <a class="btn btn-secondary btn-sm" role="button" href="{{ url_for('.rates_edit', id_=rate.id) }}">Редактировать</a>
-                      <a class="btn btn-warning btn-sm" role="button" href="{{ url_for('.rates_values', id_=rate.id) }}">Значения</a>
+                      <a class="btn btn-warning btn-sm" role="button" href="{{ url_for('.rates_values_get', id_=rate.id) }}">Значения</a>
                       <a class="btn btn-danger btn-sm" role="button" href="{{ url_for('.rates_delete', id_=rate.id) }}">Удалить</a>
                     </div>
                   </td>
