--- a/app/templates/tools/payment/data_edit.html
+++ b/app/templates/tools/payment/data_edit.html
@@ -23,6 +23,11 @@
       <div class="col-md-10 col-xl-8">
         <a class="btn btn-primary mb-2"
            role="button" style="width: 100%;font-weight: bold;border-style: none;"
+           href="{{ url_for('.pension_duty_get') }}">Пенсионные коэффициенты</a>
+      </div>
+      <div class="col-md-10 col-xl-8">
+        <a class="btn btn-primary mb-2"
+           role="button" style="width: 100%;font-weight: bold;border-style: none;"
            href="{{ url_for('.increase_get') }}">Индексация</a>
       </div>
       <div class="col-md-10 col-xl-8 mt-4">
