--- a/app/templates/tools/payment/base_list.html
+++ b/app/templates/tools/payment/base_list.html
@@ -7,7 +7,7 @@
   </div>
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-md-10">
+      <div class="col-md-auto">
         <div class="table-responsive text-center">
           <table class="table table-sm">
             {% block table %}
