--- a/app/templates/tools/payment/data_edit.html
+++ b/app/templates/tools/payment/data_edit.html
@@ -10,26 +10,13 @@
   </div>
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-md-10 col-xl-8">
-        <a class="btn btn-primary mb-2"
-           role="button" style="width: 100%;font-weight: bold;border-style: none;"
-           href="{{ url_for('.documents_get') }}">Нормативные документы</a>
-      </div>
-      <div class="col-md-10 col-xl-8">
-        <a class="btn btn-primary mb-2"
-           role="button" style="width: 100%;font-weight: bold;border-style: none;"
-           href="{{ url_for('.rates_get') }}">Базовые оклады</a>
-      </div>
-      <div class="col-md-10 col-xl-8">
-        <a class="btn btn-primary mb-2"
-           role="button" style="width: 100%;font-weight: bold;border-style: none;"
-           href="{{ url_for('.pension_duty_get') }}">Пенсионные коэффициенты</a>
-      </div>
-      <div class="col-md-10 col-xl-8">
-        <a class="btn btn-primary mb-2"
-           role="button" style="width: 100%;font-weight: bold;border-style: none;"
-           href="{{ url_for('.increase_get') }}">Индексация</a>
-      </div>
+      {% for item_name, item_link in data.items() %}
+        <div class="col-md-10 col-xl-8">
+          <a class="btn btn-primary mb-2"
+             role="button" style="width: 100%;font-weight: bold;border-style: none;"
+             href="{{ item_link }}">{{ item_name }}</a>
+        </div>
+      {% endfor %}
       <div class="col-md-10 col-xl-8 mt-4">
         <a class="btn btn-secondary d-block w-100" role="button" href="{{ url_for('.payment_tool') }}">Назад</a>
       </div>
