--- a/app/templates/tools/payment/documents_edit.html
+++ b/app/templates/tools/payment/documents_edit.html
@@ -12,15 +12,15 @@
           {{ form.hidden_tag() }}
           <div class="card shadow mb-2">
             <div class="card-header py-3">
-              <p class="text-center text-primary m-0 fw-bold" id="increase_label">{{form.name.label.text}}</p>
+              <p class="text-center text-primary m-0 fw-bold" id="{{ form.name.label.field_id }}_label">{{ form.name.label.text }}</p>
             </div>
             <div class="card-body">
-              {{ form.name(class="form-control", id="document_name", rows="6") }}
+              {{ form.name(class="form-control", id=form.name.label.field_id, rows="6") }}
             </div>
           </div>
           <div class="row">
             <div class="col mb-3">
-              {{ form.submit(class="btn btn-primary link-light", id="document_edit", style="width: 100%;font-weight: bold;border-style: none;") }}
+              {{ form.submit(class="btn btn-primary link-light", id=form.submit.label.field_id, style="width: 100%;font-weight: bold;border-style: none;") }}
             </div>
           </div>
         </form>
