--- a/app/templates/tools/payment/single_addons_edit.html
+++ b/app/templates/tools/payment/single_addons_edit.html
@@ -12,7 +12,7 @@
           {{ form.hidden_tag() }}
           <div class="card shadow mb-2">
             <div class="card-header py-3">
-              <p class="text-center text-primary m-0 fw-bold" id="rates_values_label">Значение оклада</p>
+              <p class="text-center text-primary m-0 fw-bold" id="single_addons_label">Сведения о фиксированной надбавке</p>
             </div>
             <div class="card-body" style="padding-top: 8px;">
               {{ form.name.label(class="text-center text-primary m-0 fw-bold", id=form.name.label.field_id+"_label") }}
@@ -29,11 +29,39 @@
               {% endfor %}
             </div>
             <div class="card-body" style="padding-top: 8px;">
-              {{ form.rate_id.label(class="text-center text-primary m-0 fw-bold", id=form.rate_id.label.field_id+"_label") }}
-              {{ form.rate_id(class="form-select", id=form.rate_id.label.field_id) }}
-              {% for error in form.document_id.errors %}
+              {{ form.payment_name.label(class="text-center text-primary m-0 fw-bold", id=form.payment_name.label.field_id+"_label") }}
+              {{ form.payment_name(class="form-control", id=form.payment_name.label.field_id) }}
+              {% for error in form.name.errors %}
                 <span style="color: var(--bs-danger);">{{ error }}</span>
               {% endfor %}
+            </div>
+            <div class="card-body" style="padding-top: 8px;">
+              <div class="form-check form-switch">
+                {{ form.default_state(class="form-check-input", type="checkbox", checked=form.default_state.data, id=form.default_state.label.field_id) }}
+                {{ form.default_state.label(class="form-check-label", for=form.default_state.label.field_id) }}
+              </div>
+            </div>
+            <div class="card-body" style="padding-top: 8px;">
+              Применяется к:
+              {% for item in form %}
+                {% if item.label.field_id.startswith('rate_') %}
+                  <div class="form-check form-switch">
+                    {{ item(class="form-check-input", type="checkbox", checked=item.data, id=item.label.field_id) }}
+                    {{ item.label(class="form-check-label", for=item.label.field_id) }}
+                  </div>
+                {% endif %}
+              {% endfor %}
+            </div>
+            <div class="card-body" style="padding-top: 8px;">
+              Использовать для расчета:
+              <div class="form-check form-switch">
+                {{ form.salary(class="form-check-input", type="checkbox", checked=form.salary.data, id=form.salary.label.field_id+"_label") }}
+                {{ form.salary.label(class="form-check-label", for=form.salary.label.field_id) }}
+              </div>
+              <div class="form-check form-switch">
+                {{ form.pension(class="form-check-input", type="checkbox", checked=form.pension.data, id=form.pension.label.field_id+"_label") }}
+                {{ form.pension.label(class="form-check-label", for=form.pension.label.field_id) }}
+              </div>
             </div>
             <div class="card-body" style="padding-top: 8px;">
               {{ form.document_id.label(class="text-center text-primary m-0 fw-bold", id=form.document_id.label.field_id+"_label") }}
@@ -51,8 +79,8 @@
             </div>
           </div>
           <div class="row">
-            <div class="col mb-3">
-              {{ form.submit(class="btn btn-primary link-light", id=form.submit.label.field_id, style="width: 100%;font-weight: bold;border-style: none;") }}
+            <div class="col mb-2">
+              {{ form.submit(class="btn btn-primary link-light", id="single_addons_edit", style="width: 100%;font-weight: bold;border-style: none;") }}
             </div>
           </div>
           {% if form.form_errors %}
