--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -43,9 +43,18 @@
             <li class="nav-item text-start"><a class="nav-link py-2" href="{{ url_for('schedule.schedule') }}">
               <i class="far fa-calendar-alt"></i><span>Расписание</span></a>
             </li>
-            <!-- Отчет о нагрузке -->
-            <li class="nav-item"><a class="nav-link py-2" href="{{ url_for('load.load_report') }}">
-              <i class="fas fa-receipt"></i><span>Отчет о нагрузке</span></a>
+            <!-- Отчеты -->
+            <li class="nav-item dropdown">
+              <a class="dropdown-toggle nav-link py-2" aria-expanded="true" data-bs-toggle="dropdown" data-bs-auto-close="false" href="#">
+                <i class="fas fa-receipt"></i><span>Отчеты</span>
+              </a>
+              <div class="dropdown-menu text-center py-0">
+                <a class="dropdown-item text-center py-1" href="{{ url_for('reports.load_report') }}">Нагрузка по кафедре</a>
+                {% if current_user.role.slug in (config.ROLE_ADMIN, config.ROLE_METOD) %}
+                  <a class="dropdown-item text-center py-1" href="{{ url_for('reports.holidays_report') }}">Занятость в выходные</a>
+                {% endif %}
+              </div>
+
             </li>
             {% if current_user.is_authenticated and current_user.role.slug in (config.ROLE_ADMIN, config.ROLE_METOD) %}
               <!-- Учебные планы -->
