--- a/app/templates/staff/staff_edit.html
+++ b/app/templates/staff/staff_edit.html
@@ -11,9 +11,9 @@
     {{ form.hidden_tag() }}
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-md-10 col-xl-8">
+        <div class="col-md-10 col-xl-9">
           <div class="table-responsive">
-            <table class="table table-sm mt-3">
+            <table class="table table-sm text-dark mt-3" style="border-color:darkgray;">
               <thead>
                 <tr>
                   <th class="text-center">Ф.И.О.</th>
@@ -22,39 +22,41 @@
                 </tr>
               </thead>
               <tbody>
-                {% for staff in form.staff_list %}
-{#                  {{ staff }}#}
-                  <tr>
-                    <td hidden="hidden">{{ staff.staff_id }}</td>
-                    <td class="text-center">{{ staff.staff_name }}</td>
-                    <td class="text-center">{{ staff.position }}</td>
-                    <td class="text-center">{{ staff.current_status }}
-{#                      <select class="form-select">#}
-{#                        <option value="0" selected="">В строю</option>#}
-{#                        <optgroup label="Причины отсутствия:">#}
-{#                          {% for choice in staff.current_status.choices %}#}
-{#                            <option value={{ choice }}>{{ choice }}</option>#}
-{#                          {% endfor %}#}
-{#                        </optgroup>#}
-{#                      </select>#}
-                    </td>
-                  </tr>
+              {% for staff in staff_data %}
+                <tr>
+                  <td hidden="hidden">{{ staff.get('staff_id') }}</td>
+                  <td class="text-center">{{ staff.get('name') }}</td>
+                  <td class="text-center">{{ staff.get('position') }}</td>
+                  <td class="text-center">
+                    {% for item in form %}
+                      {% if item.label.field_id == 'staff_id_' + staff.get('staff_id') %}
+                        <div class="row mb-1">
+                          <div class="col">
+                            {{ item(class="form-select") }}
+                            {% for error in item.errors %}
+                              <span style="color: var(--bs-danger);">{{ error }}</span>
+                            {% endfor %}
+                          </div>
+                        </div>
+                      {% endif %}
+                     {% endfor %}
+                  </td>
+                </tr>
                 {% endfor %}
               </tbody>
             </table>
           </div>
-        </div>
-      </div>
-      <div class="row justify-content-center">
-        <div class="col-md-10 col-xl-8">
-            <button class="btn btn-success fw-bold" type="submit">Сохранить</button>
-{#          {{ form.submit(class="btn btn-success fw-bold", id=form.submit.label.field_id, style="width: 100%;font-weight: bold;border-style: none;") }}#}
+          <div class="btn-group" role="group">
+            {% if status == config.STAFF_IN_PROGRESS_STATUS %}
+              <button class="btn btn-success fw-bold" type="submit">Сохранить</button>
+            {% endif %}
+            <a class="btn btn-warning fw-bold" role="button" href="{{ url_for('staff.stable_staff') }}">Назад</a>
+          </div>
         </div>
       </div>
     </div>
     {% if form.form_errors %}
       <span id="error" class="text-danger" style="color: var(--bs-danger);">{{ form.form_errors }}</span>
     {% endif %}
-
   </form>
 {% endblock %}
