App refactoring for repository pattern

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -64,7 +64,7 @@
               </a>
               <div class="dropdown-menu text-center py-0">
 {#                <a class="dropdown-item text-center py-1" href="../staff/staff_info.html">Общая информация</a>#}
-                <a class="dropdown-item text-center py-1" href="{{ url_for('staff.stable_staff') }}">Постоянный состав</a>
+                <a class="dropdown-item text-center py-1" href="{{ url_for('staff.staff_stable') }}">Постоянный состав</a>
 {#                <a class="dropdown-item text-center py-1" href="../staff/various_staff.html">Переменный состав</a>#}
               </div>
             </li>
