--- a/app/templates/staff/staff_stable_edit.html
+++ b/app/templates/staff/staff_stable_edit.html
@@ -48,7 +48,7 @@
             {% if status == config.STAFF_IN_PROGRESS_STATUS %}
               <button class="btn btn-success fw-bold" type="submit">Сохранить</button>
             {% endif %}
-            <a class="btn btn-warning fw-bold" role="button" href="{{ url_for('staff.stable_staff') }}">Назад</a>
+            <a class="btn btn-warning fw-bold" role="button" href="{{ url_for('staff.staff_stable') }}">Назад</a>
           </div>
         </div>
       </div>
