--- a/app/templates/staff/staff_stable.html
+++ b/app/templates/staff/staff_stable.html
@@ -40,7 +40,7 @@
                         {% if doc_status == config.STAFF_IN_PROGRESS_STATUS %}
                           {% if staff_data[dept_type][dept_data].get("staff_absence") == "нет данных" %}
                             <a class="btn btn-primary btn-sm" role="button"
-                               href="{{ url_for("staff.stable_staff_edit", department_id=dept_data, date=date) }}">Добавить</a>
+                               href="{{ url_for("staff.staff_stable_edit", department_id=dept_data, date=date) }}">Добавить</a>
                           {% else %}
                             <a class="btn btn-warning btn-sm" role="button"
                                href="{{ url_for("staff.staff_stable_edit", department_id=dept_data, date=date) }}">Изменить</a>
